--- a/index.html
+++ b/index.html
@@ -3,36 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/icons/favicon-32x32.png" />
     <link rel="stylesheet" href="./assets/styles/styles.css" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet" />
-
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
     <div class="container">
-      <img src="./assets/images/image-qr-code.png" alt="qr-code-image" />
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>
+      <img
+        class="container-img"
+        src="./assets/images/image-qr-code.png"
+        alt="qr-code-image" />
+      <h1 class="container-text">
+        Improve your front-end skills by building projects
+      </h1>
+      <p class="container-description">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Santiago Hurtado</a>.
     </div>
   </body>
 </html>
